--- a/index.html
+++ b/index.html
@@ -4,4 +4,16 @@
         <link rel="stylesheet" href="../colmaracademy/resources/css/style.css">
         <title>Colmar Academy</title>
     </head>
+
+    <!-- Header -->
+    <header>
+        <img src="../colmaracademy/resources/images/ic-logo.svg" alt="logo">
+        <nav class="">
+            <ul>
+                <li>On Campus</li>
+                <li>Online for Companies</li>
+                <li>Sign in</li>
+            </ul>
+        </nav>
+    </header>
 </html>
