--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Header -->
     <header>
         <img src="../colmaracademy/resources/images/ic-logo.svg" alt="logo">
-        <nav class="">
+        <nav>
             <ul>
                 <li>On Campus</li>
                 <li>Online for Companies</li>
@@ -16,4 +16,14 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Main -->
+    <main>
+        <section class="landing">
+            <img src="" alt="">
+            <h1>Learn something new everyday</h1>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+            <button>Start here</button>
+        </section>
+    </main>
 </html>
