adding more html content minor adds to css

--- a/index.html
+++ b/index.html
@@ -20,10 +20,43 @@
     <!-- Main -->
     <main>
         <section class="landing">
-            <img src="" alt="">
-            <h1>Learn something new everyday</h1>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-            <button>Start here</button>
+            <img id="banner" src="../colmaracademy/resources/images/banner.jpg" alt="Students learning">
+            <div class="landing-text">
+                <h1>Learn something new everyday</h1>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                <button>Start here</button>
+            </div>
+        </section>
+
+        <section class="informal">
+            <div class="practicing">
+                <img src="../colmaracademy/resources/images/information-main.jpg" alt="">
+                <h2>It doesn't hurt to keep practicing</h2>
+                <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed no accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            </div>
+            <div class="small-informals">
+                <div class="orientation">
+                    <img src="../colmaracademy/resources/images/information-orientation.jpg" alt="">
+                    <h4>Orientation date</h4>
+                    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                    <p><a href="">Read More</a></p>
+                </div>
+                <div class="campus">
+                    <img src="../colmaracademy/resources/images/information-campus.jpg" alt="">
+                    <h4>Our Campus</h4>
+                    <p>Find which campus is close by you</p>
+                    <p><a href="">Read more</a></p>
+                </div>
+                <div class="lecture">
+                    <h4>Our guest lecture</h4>
+                    <p>Join a keynote with oliver Sack about music in medical treatment</p>
+                    <p><a href="">Read more</a></p>
+                </div>
+            </div>
+        </section>
+        <section class="learning">
+            <h2>Start learning</h2>
+            
         </section>
     </main>
 </html>
