added final content

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             </div>
         </section>
 
+    <!-- Informal -->    
+
         <section class="informal">
             <div class="practicing">
                 <img src="../colmaracademy/resources/images/information-main.jpg" alt="">
@@ -48,15 +50,88 @@
                     <p><a href="">Read more</a></p>
                 </div>
                 <div class="lecture">
+                    <img src="../colmaracademy/resources/images/information-guest-lecture.jpg" alt="">
                     <h4>Our guest lecture</h4>
                     <p>Join a keynote with oliver Sack about music in medical treatment</p>
                     <p><a href="">Read more</a></p>
                 </div>
             </div>
         </section>
+
+    <!-- Start Learning -->
+
         <section class="learning">
             <h2>Start learning</h2>
-            
+            <div class="courses">
+                <div class="software">
+                    <img src="../colmaracademy/resources/images/course-software.jpg" alt="">
+                    <h4>Software Engineering</h4>
+                    <p>COURSES</p>
+                    <p>Web Development, Mobile Development, iOT, APIs</p>
+                </div>
+                <div class="Art">
+                    <img src="../colmaracademy/resources/images/course-computer-art.jpg" alt="">
+                    <h4>Computer Art</h4>
+                    <p>COURSES</p>
+                    <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                </div>
+                <div class="design">
+                    <img src="../colmaracademy/resources/images/course-design.jpg" alt="">
+                    <h4>Design</h4>
+                    <p>COURSES</p>
+                    <p>User Experience Design, User Research, Visual Design</p>
+                </div>
+                <div class="data"></div>
+                    <img src="../colmaracademy/resources/images/course-data.jpg" alt="">
+                    <h4>Data</h4>
+                    <p>COURSES</p>
+                    <p>Data Science, Big Data, SQL, Data Visualization</p>
+                </div>
+                <div class="business">
+                    <img src="../colmaracademy/resources/images/course-business.jpg" alt="">
+                    <h4>Business</h4>
+                    <p>COURSES</p>
+                    <p>Product Development, Business Development, Startup</p>
+                </div>
+                <div class="marketing">
+                    <img src="../colmaracademy/resources/images/course-marketing.jpg" alt="">
+                    <h4>Marketing</h4>
+                    <p>COURESES</p>
+                    <p>Analytics, Content Marketing, Mobile Marketing</p>
+                </div>
+            </div>    
+        </section>
+
+    <!-- Thesis -->    
+        
+        <section class="thesis">
+            <div class="thesis-video">
+                <video controls>
+                    <source src="../colmaracademy/resources/videos/thesis.mp4">
+                </video>
+                <h4>Reimagine Urban</h4>
+                <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed no accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            </div>
+            <div class="containers">
+                <div class="fisma">
+                    <img src="../colmaracademy/resources/images/thesis-fisma.jpg" alt="">
+                    <h4>Fisma: Design and Prototype</h4>
+                    <p>Designer showcase of new prototype product</p>
+                </div>
+                <div class="now">
+                    <img src="../colmaracademy/resources/images/thesis-now-and-then.jpg" alt="">
+                    <h4>Now and then</h4>
+                    <p>Research study about New York</p>
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer>
+        <p>&copy; 2016 Colmar Academy. All rights reserved</p>
+        <ul>
+            <li>Terms</li>
+            <li>Privacy</li>
+        </ul>
+    </footer>
 </html>
