--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Header -->
     <header>
         <img src="../colmaracademy/resources/images/ic-logo.svg" alt="logo">
+        <h3>COLMAR<span>ACADEMY</span></h3>
         <nav>
             <ul>
                 <li>On Campus</li>
