--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 
     <!-- Header -->
     <header>
-        <img src="../colmaracademy/resources/images/ic-logo.svg" alt="logo">
-        <h3>COLMAR<span>ACADEMY</span></h3>
+        <div class="logo">
+            <ul>
+                <li><img src="../colmaracademy/resources/images/ic-logo.svg" alt="logo"></li>
+                <li><h3>COLMAR<span>ACADEMY</span></h3></li>
+            </ul>
+        </div>
         <nav>
             <ul>
                 <li>On Campus</li>
