--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <div class="landing-text">
                 <h1>Learn something new everyday</h1>
                 <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                <button>Start here</button>
+                <div class="button">
+                    <p>Start here</p>
+                </div>
             </div>
         </section>
 
@@ -40,6 +42,8 @@
                 <img src="../colmaracademy/resources/images/information-main.jpg" alt="">
                 <h2>It doesn't hurt to keep practicing</h2>
                 <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed no accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+                <br>
+                <p>Emanuel, Sr Strategist at Hiring.com</p>
             </div>
             <div class="small-informals">
                 <div class="orientation">
