--- a/index.html
+++ b/index.html
@@ -45,24 +45,30 @@
                 <br>
                 <p>Emanuel, Sr Strategist at Hiring.com</p>
             </div>
-            <div class="small-informals">
-                <div class="orientation">
+            <div class="small-containers">
+                <div class="container">
                     <img src="../colmaracademy/resources/images/information-orientation.jpg" alt="">
-                    <h4>Orientation date</h4>
-                    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                    <p><a href="">Read More</a></p>
+                    <ul>
+                        <li><h4>Orientation date</h4></li>
+                        <li><p>Tue 10/11 & Wed 10/12: 8am-3pm</p></li>
+                        <li><p><a href="">Read More</a></p></li>
+                    </ul>
                 </div>
-                <div class="campus">
+                <div class="container">
                     <img src="../colmaracademy/resources/images/information-campus.jpg" alt="">
-                    <h4>Our Campus</h4>
-                    <p>Find which campus is close by you</p>
-                    <p><a href="">Read more</a></p>
+                    <ul>
+                        <li><h4>Our Campus</h4></li>
+                        <li><p>Find which campus is close by you</p></li>
+                        <li><p><a href="">Read more</a></p></li>
+                    </ul>
                 </div>
-                <div class="lecture">
+                <div class="container">
                     <img src="../colmaracademy/resources/images/information-guest-lecture.jpg" alt="">
-                    <h4>Our guest lecture</h4>
-                    <p>Join a keynote with oliver Sack about music in medical treatment</p>
-                    <p><a href="">Read more</a></p>
+                    <ul>
+                        <li><h4>Our guest lecture</h4></li>
+                        <li><p>Join a keynote with Oliver Sack about music in medical treatment</p></li>
+                        <li><p><a href="">Read more</a></p></li>
+                    </ul>
                 </div>
             </div>
         </section>
