--- a/index.html
+++ b/index.html
@@ -78,37 +78,37 @@
         <section class="learning">
             <h2>Start learning</h2>
             <div class="courses">
-                <div class="software">
+                <div class="course">
                     <img src="../colmaracademy/resources/images/course-software.jpg" alt="">
                     <h4>Software Engineering</h4>
                     <p>COURSES</p>
                     <p>Web Development, Mobile Development, iOT, APIs</p>
                 </div>
-                <div class="Art">
+                <div class="course">
                     <img src="../colmaracademy/resources/images/course-computer-art.jpg" alt="">
                     <h4>Computer Art</h4>
                     <p>COURSES</p>
                     <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
                 </div>
-                <div class="design">
+                <div class="course">
                     <img src="../colmaracademy/resources/images/course-design.jpg" alt="">
                     <h4>Design</h4>
                     <p>COURSES</p>
                     <p>User Experience Design, User Research, Visual Design</p>
                 </div>
-                <div class="data"></div>
+                <div class="course">
                     <img src="../colmaracademy/resources/images/course-data.jpg" alt="">
                     <h4>Data</h4>
                     <p>COURSES</p>
                     <p>Data Science, Big Data, SQL, Data Visualization</p>
                 </div>
-                <div class="business">
+                <div class="course">
                     <img src="../colmaracademy/resources/images/course-business.jpg" alt="">
                     <h4>Business</h4>
                     <p>COURSES</p>
                     <p>Product Development, Business Development, Startup</p>
                 </div>
-                <div class="marketing">
+                <div class="course">
                     <img src="../colmaracademy/resources/images/course-marketing.jpg" alt="">
                     <h4>Marketing</h4>
                     <p>COURESES</p>
@@ -120,6 +120,7 @@
     <!-- Thesis -->    
         
         <section class="thesis">
+            <div><h2>Thesis exhibit</h2></div>
             <div class="thesis-video">
                 <video controls>
                     <source src="../colmaracademy/resources/videos/thesis.mp4">
@@ -127,13 +128,13 @@
                 <h4>Reimagine Urban</h4>
                 <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed no accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
             </div>
-            <div class="containers">
-                <div class="fisma">
+            <div class="thesis-containers">
+                <div class="container">
                     <img src="../colmaracademy/resources/images/thesis-fisma.jpg" alt="">
                     <h4>Fisma: Design and Prototype</h4>
                     <p>Designer showcase of new prototype product</p>
                 </div>
-                <div class="now">
+                <div class="container">
                     <img src="../colmaracademy/resources/images/thesis-now-and-then.jpg" alt="">
                     <h4>Now and then</h4>
                     <p>Research study about New York</p>
