container and list changes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </header>
 
     <!-- Main -->
+
+    <!-- Landing Page -->
     <main>
         <section class="landing">
             <img id="banner" src="../colmaracademy/resources/images/banner.jpg" alt="Students learning">
@@ -62,7 +64,7 @@
                         <li><p><a href="">Read more</a></p></li>
                     </ul>
                 </div>
-                <div class="container">
+                <div class="container" id="guest">
                     <img src="../colmaracademy/resources/images/information-guest-lecture.jpg" alt="">
                     <ul>
                         <li><h4>Our guest lecture</h4></li>
@@ -120,26 +122,32 @@
     <!-- Thesis -->    
         
         <section class="thesis">
-            <div><h2>Thesis exhibit</h2></div>
-            <div class="thesis-video">
-                <video controls>
-                    <source src="../colmaracademy/resources/videos/thesis.mp4">
-                </video>
-                <h4>Reimagine Urban</h4>
-                <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed no accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-            </div>
-            <div class="thesis-containers">
-                <div class="container">
-                    <img src="../colmaracademy/resources/images/thesis-fisma.jpg" alt="">
-                    <h4>Fisma: Design and Prototype</h4>
-                    <p>Designer showcase of new prototype product</p>
+            <h2>Thesis exhibit</h2>
+            <div class="thesis-main">
+                <div class="thesis-video">
+                    <video controls>
+                        <source src="../colmaracademy/resources/videos/thesis.mp4">
+                    </video>
+                    <h4>Reimagine Urban</h4>
+                    <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed no accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
                 </div>
-                <div class="container">
-                    <img src="../colmaracademy/resources/images/thesis-now-and-then.jpg" alt="">
-                    <h4>Now and then</h4>
-                    <p>Research study about New York</p>
+                <div class="thesis-containers">
+                    <div class="container" id="fisma">
+                        <img src="../colmaracademy/resources/images/thesis-fisma.jpg" alt="">
+                        <ul>
+                            <li><h4>Fisma: Design and Prototype</h4></li>
+                            <li><p>Designer showcase of new prototype product</p></li>
+                        </ul>
+                        </div>
+                    <div class="container">
+                        <img src="../colmaracademy/resources/images/thesis-now-and-then.jpg" alt="">
+                        <ul>     
+                            <li><h4>Now and then</h4></li>
+                            <li><p>Research study about New York</p></li>
+                        </ul>
+                        </div>
                 </div>
-            </div>
+            </div>    
         </section>
     </main>
 
