--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="../colmaracademy/resources/css/style.css">
         <title>Colmar Academy</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="../colmaracademy/resources/css/style.css">
     </head>
 
     <!-- Header -->
     <header>
+        <div class="desktop">
         <div class="logo">
             <ul>
                 <li><img src="../colmaracademy/resources/images/ic-logo.svg" alt="logo"></li>
@@ -20,6 +22,16 @@
                 <li>Sign in</li>
             </ul>
         </nav>
+        </div>
+
+        <div class="mobile">
+            <ul>
+                <li><a href=""><img src="../colmaracademy/resources/images/ic-logo.svg" alt=""></a></li>
+                <li><a href=""><img src="../colmaracademy/resources/images/ic-on-campus.svg" alt=""></a></li>
+                <li><a href=""><img src="../colmaracademy/resources/images/ic-online.svg" alt=""></a></li>
+                <li><a href=""><img src="../colmaracademy/resources/images/ic-login.svg" alt=""></a></li>
+            </ul>
+        </div>
     </header>
 
     <!-- Main -->
