--- a/index.html
+++ b/index.html
@@ -128,7 +128,15 @@
                     <p>COURESES</p>
                     <p>Analytics, Content Marketing, Mobile Marketing</p>
                 </div>
-            </div>    
+            </div>
+            <div class="mobile">
+                <h4>Software engineering</h4>
+                <h4>Computer Art</h4>
+                <h4>Design</h4>
+                <h4>Data</h4>
+                <h4>Business</h4>
+                <h4>Marketing</h4>
+            </div> 
         </section>
 
     <!-- Thesis -->    
@@ -137,7 +145,7 @@
             <h2>Thesis exhibit</h2>
             <div class="thesis-main">
                 <div class="thesis-video">
-                    <video controls>
+                    <video controls id="video">
                         <source src="../colmaracademy/resources/videos/thesis.mp4">
                     </video>
                     <h4>Reimagine Urban</h4>
@@ -159,7 +167,12 @@
                         </ul>
                         </div>
                 </div>
-            </div>    
+            </div> 
+            <div class="mobile-video">
+                <video controls id="video">
+                    <source src="../colmaracademy/resources/videos/thesis.mp4">
+                </video>
+            </div>   
         </section>
     </main>
 
